--- a/MDK-ARM/usb.uvprojx
+++ b/MDK-ARM/usb.uvprojx
@@ -606,6 +606,11 @@
               <FileType>1</FileType>
               <FilePath>..\Src\BMP_graph.c</FilePath>
             </File>
+            <File>
+              <FileName>Init.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\Init.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
