--- a/MDK-ARM/usb.uvprojx
+++ b/MDK-ARM/usb.uvprojx
@@ -597,14 +597,19 @@
               <FilePath>..\Src\My_font.c</FilePath>
             </File>
             <File>
+              <FileName>Init.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\Init.c</FilePath>
+            </File>
+            <File>
               <FileName>BMP_graph.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\BMP_graph.c</FilePath>
             </File>
             <File>
-              <FileName>Init.c</FileName>
+              <FileName>Terminal.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Src\Init.c</FilePath>
+              <FilePath>..\Src\Terminal.c</FilePath>
             </File>
           </Files>
         </Group>
