--- a/MDK-ARM/usb.uvprojx
+++ b/MDK-ARM/usb.uvprojx
@@ -526,21 +526,56 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>Sensors</GroupName>
+          <Files>
+            <File>
+              <FileName>BMP085.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\BMP085.c</FilePath>
+            </File>
+            <File>
+              <FileName>I2Cdev.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\I2Cdev.c</FilePath>
+            </File>
+            <File>
+              <FileName>LM75_hal.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\LM75_hal.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>USB</GroupName>
+          <Files>
+            <File>
+              <FileName>usb_device.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usb_device.c</FilePath>
+            </File>
+            <File>
+              <FileName>usbd_cdc_if.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usbd_cdc_if.c</FilePath>
+            </File>
+            <File>
+              <FileName>usbd_conf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usbd_conf.c</FilePath>
+            </File>
+            <File>
+              <FileName>usbd_desc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usbd_desc.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
           <GroupName>Application/User</GroupName>
           <Files>
-            <File>
-              <FileName>usb_device.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../Src/usb_device.c</FilePath>
-            </File>
-            <File>
-              <FileName>usbd_cdc_if.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../Src/usbd_cdc_if.c</FilePath>
-            </File>
             <File>
               <FileName>stm32f1xx_it.c</FileName>
               <FileType>1</FileType>
@@ -552,24 +587,9 @@
               <FilePath>../Src/main.c</FilePath>
             </File>
             <File>
-              <FileName>usbd_conf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../Src/usbd_conf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32f1xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/stm32f1xx_hal_msp.c</FilePath>
-            </File>
-            <File>
-              <FileName>usbd_desc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../Src/usbd_desc.c</FilePath>
-            </File>
-            <File>
-              <FileName>LM75_hal.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\LM75_hal.c</FilePath>
             </File>
             <File>
               <FileName>Lcd_Driver.c</FileName>
@@ -580,16 +600,6 @@
               <FileName>GUI.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\GUI.c</FilePath>
-            </File>
-            <File>
-              <FileName>BMP085.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\BMP085.c</FilePath>
-            </File>
-            <File>
-              <FileName>I2Cdev.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\I2Cdev.c</FilePath>
             </File>
             <File>
               <FileName>My_font.c</FileName>
@@ -610,6 +620,11 @@
               <FileName>Terminal.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\Terminal.c</FilePath>
+            </File>
+            <File>
+              <FileName>Hello_screen.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\Hello_screen.c</FilePath>
             </File>
           </Files>
         </Group>
