--- a/MDK-ARM/usb.uvprojx
+++ b/MDK-ARM/usb.uvprojx
@@ -50,7 +50,7 @@
           <OutputName>usb Configuration</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
-          <CreateHexFile>0</CreateHexFile>
+          <CreateHexFile>1</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
           <ListingPath></ListingPath>
@@ -347,7 +347,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -625,6 +625,11 @@
               <FileName>buttoms.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\buttoms.c</FilePath>
+            </File>
+            <File>
+              <FileName>Files.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\Files.c</FilePath>
             </File>
           </Files>
         </Group>
